--- a/less22/hw1/styles.css
+++ b/less22/hw1/styles.css
@@ -27,7 +27,7 @@ html {
   list-style-type: none;
 }
 
-.list__item {
+.li__elem {
   display: flex;
   align-items: center;
   background-color: wheat;
@@ -37,15 +37,15 @@ html {
   padding: 8px;
 }
 
-.list__item:last-child {
+.li__elem:last-child {
   margin-bottom: 0;
 }
-.list__item-done {
+.li__elem-done {
   opacity: 0.7;
   text-decoration: line-through;
 }
 
-.list__item-checkbox {
+.li__elem-checkbox {
   margin-right: 8px;
 }
 .btn {
