--- a/less24/hw3/styles.css
+++ b/less24/hw3/styles.css
@@ -20,11 +20,27 @@ html {
   margin: auto;
   margin-top: 32px;
 }
+
 .list {
   width: 100%;
   padding: 0;
   margin: auto;
   list-style-type: none;
+}
+
+.list__item {
+  display: flex;
+  align-items: center;
+  height: 40px;
+  border-radius: 8px;
+  background-color: wheat;
+  margin-bottom: 8px;
+  padding: 8px;
+}
+
+.list__item_done {
+  text-decoration: line-through;
+  opacity: 0.7;
 }
 
 .li__elem {
