--- a/less27/todoList/styles.css
+++ b/less27/todoList/styles.css
@@ -41,7 +41,7 @@ html {
 .list__item_done {
   text-decoration: line-through;
   opacity: 0.7;
-  background-color: coral;
+  background-color: #ffb79d;
 }
 
 .li__elem {
